--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6",
-    "firebase": "^10.5.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "react-native-screens": "~3.24.0",
+    "expo": "~49.0.0",
+    "firebase": "^10.5.0",
+    "react": "18.2.0",
+    "react-native": "0.72.10",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-gesture-handler": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
